[gd_scene load_steps=17 format=3 uid="uid://i81pumhgpsx7"]

[ext_resource type="Script" path="res://Scripts/menu_scripts/main_menu.gd" id="1_wpd8b"]
[ext_resource type="PackedScene" uid="uid://c0id1c01yo1ck" path="res://Scenes/Menus/menutemplate.tscn" id="2_lt155"]
[ext_resource type="FontFile" uid="uid://c1852jjypyisc" path="res://Assets/The Centurion.otf" id="3_3aj6u"]
[ext_resource type="Shader" path="res://Assets/Shaders/pixelate.gdshader" id="3_w6ur7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8a6q5"]
shader = ExtResource("3_w6ur7")
shader_parameter/amount = 400

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yhydq"]
shader = ExtResource("3_w6ur7")
shader_parameter/amount = 400

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dqcxr"]

[sub_resource type="GDScript" id="GDScript_h4ssn"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xrawt"]
shader = ExtResource("3_w6ur7")
shader_parameter/amount = 400

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1lrkj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_owxxc"]
shader = ExtResource("3_w6ur7")
shader_parameter/amount = 400

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2rh1v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jysbr"]
shader = ExtResource("3_w6ur7")
shader_parameter/amount = 300

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d4ae1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8371c"]
shader = ExtResource("3_w6ur7")
shader_parameter/amount = 300

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kc6iu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wpd8b")

[node name="MenuTemplate" parent="." instance=ExtResource("2_lt155")]
layout_mode = 1
offset_right = 1.0
offset_bottom = -1.0

[node name="Label2" type="Label" parent="MenuTemplate"]
material = SubResource("ShaderMaterial_8a6q5")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.372
anchor_top = 0.184
anchor_right = 0.372
anchor_bottom = 0.184
offset_left = -124.728
offset_top = -40.232
offset_right = 191.272
offset_bottom = 120.768
theme_override_fonts/font = ExtResource("3_3aj6u")
theme_override_font_sizes/font_size = 60
text = "Castle
Conquest"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MenuTemplate"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.340288
anchor_top = 0.411901
anchor_right = 0.448434
anchor_bottom = 0.710201
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="MenuTemplate/VBoxContainer3"]
material = SubResource("ShaderMaterial_yhydq")
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_3aj6u")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_dqcxr")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_dqcxr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dqcxr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_dqcxr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dqcxr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_dqcxr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dqcxr")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dqcxr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dqcxr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_dqcxr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_dqcxr")
text = "Play
"
script = SubResource("GDScript_h4ssn")

[node name="Spacer" type="Control" parent="MenuTemplate/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsButton" type="Button" parent="MenuTemplate/VBoxContainer3"]
material = SubResource("ShaderMaterial_xrawt")
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_3aj6u")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_1lrkj")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_1lrkj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1lrkj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1lrkj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_1lrkj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1lrkj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1lrkj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_1lrkj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1lrkj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_1lrkj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1lrkj")
text = "Settings
"

[node name="Spacer2" type="Control" parent="MenuTemplate/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="TutorialButton" type="Button" parent="MenuTemplate/VBoxContainer3"]
material = SubResource("ShaderMaterial_owxxc")
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_3aj6u")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_2rh1v")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_2rh1v")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2rh1v")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_2rh1v")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_2rh1v")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_2rh1v")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2rh1v")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_2rh1v")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2rh1v")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_2rh1v")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2rh1v")
text = "Tutorial
"

[node name="HBoxContainer" type="HBoxContainer" parent="MenuTemplate"]
layout_mode = 2
offset_left = 413.0
offset_top = 510.0
offset_right = 716.0
offset_bottom = 571.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 170

[node name="AboutButton" type="Button" parent="MenuTemplate/HBoxContainer"]
material = SubResource("ShaderMaterial_jysbr")
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3aj6u")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_d4ae1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_d4ae1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d4ae1")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_d4ae1")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_d4ae1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_d4ae1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d4ae1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_d4ae1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d4ae1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_d4ae1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_d4ae1")
text = "About
"

[node name="QuitButton" type="Button" parent="MenuTemplate/HBoxContainer"]
material = SubResource("ShaderMaterial_8371c")
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3aj6u")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_kc6iu")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_kc6iu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kc6iu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_kc6iu")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kc6iu")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_kc6iu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kc6iu")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_kc6iu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kc6iu")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_kc6iu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_kc6iu")
text = "Quit
"

[connection signal="pressed" from="MenuTemplate/VBoxContainer3/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuTemplate/VBoxContainer3/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuTemplate/VBoxContainer3/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="MenuTemplate/HBoxContainer/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="MenuTemplate/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
